@@ -2,6 +2,8 @@ Changes in 0.14.13:
   * Redirections work
   * Sped up group generation
   * Added optional 'recurse' parameter to netclient.createChangeSetFile
+  * The first argument to the Requires and TagSpec commands can now have
+    macros interpolated, as in r.Requires('%(bindir)s/foo', ...)
 
 Changes in 0.14.12:
   * The shadow command looks at buildLabel instead of following
